# verychic-mcp

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  README.md  glama.json  mcp.json  pyproject.toml  render.yaml  server.json  smithery.yaml
.cursor-plugin/: plugin.json
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-06-23-connect-video-design.md  2026-06-24-landing-video-asset-serving-design.md
tests/: test_api.py  test_discovery.py  test_errors.py  test_geo.py  test_http_client.py  test_network_smoke.py  test_parsers.py  test_server.py  test_themes.py  test_version_consistency.py
tests/fixtures/: checkin_availabilities_sample.json  hotel_sample.json  preview_sample.json  products_sample.json
verychic_mcp/: __init__.py  api.py  assets.py  config.py  discovery.py  errors.py  geo.py  http_client.py  landing.py  models.py  parsers.py  server.py  themes.py
