[project]
name = "verychic-mcp"
version = "0.1.5"
description = "Unofficial read-only MCP server for VeryChic hotel offers"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Jordan Tete", email = "tetej171@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "verychic", "hotels", "travel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["curl_cffi>=0.7", "mcp[cli]>=1.2"]

[project.urls]
Homepage = "https://github.com/jordantete/verychic-mcp"
Repository = "https://github.com/jordantete/verychic-mcp"
Issues = "https://github.com/jordantete/verychic-mcp/issues"
Changelog = "https://github.com/jordantete/verychic-mcp/releases"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "build>=1.2"]

[project.scripts]
verychic-mcp = "verychic_mcp.server:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# landing.py is a single embedded HTML/CSS document; line length is irrelevant there.
"verychic_mcp/landing.py" = ["E501"]

[tool.pytest.ini_options]
markers = ["network: test requiring real network access (excluded from CI)"]
addopts = "-m 'not network'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verychic_mcp"]
